update from branch

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 h1 {
   text-align: center;
   width: 350px;
-  background-color: cornflowerblue;
+  background-color: white;
   color: white;
   margin: 20px auto;
 }
 
 body {
-  background-color: coral;
+  background-color: black;
 }
